--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
 version: '3'
- 
+
 services:
   db:
-    image: mysql:5.7
-    container_name: db
-    ports:
-      - "6033:3306"
-    volumes:
-      - dbdata:/var/lib/mysql
+    container_name: mysql8
+    image: mysql:8.0.32-debian
+    command: mysqld --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     environment:
-      MYSQL_ROOT_PASSWORD: 456
-      MYSQL_DATABASE: app_db
-      MYSQL_USER: db_user
-      MYSQL_PASSWORD: 123
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: sandbox
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+    ports:
+      - '3306:3306'
+    volumes:
+      - './docker/db/data:/var/lib/mysql'
+      - './docker/db/my.cnf:/etc/mysql/conf.d/my.cnf'
+      - './docker/db/sql:/docker-entrypoint-initdb.d'
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     container_name: pma
@@ -25,6 +27,3 @@ services:
       PMA_HOST: db
       PMA_PORT: 3306
       PMA_ARBITRARY: 1
-
-volumes:
-  dbdata:
